force-app/main/default/objects/Candidate_Technical_Answer__c/Candidate_Technical_Answer__c.object-meta.xml
<CustomObject>
    <label>Candidate - Technical Answer</label>
    <nameField>
        <displayFormat>CT - {00000}</displayFormat>
        <label>Candidate - Technical Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate - Technical Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>