force-app/main/default/objects/Candidate_Technical_Answer__c/fields/CandidateId__c.field-meta.xml
<CustomField>
    <fullName>CandidateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CandidateId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidate - Technical Answers</relationshipLabel>
    <relationshipName>Candidate_Technical_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>