force-app/main/default/objects/Candidate_Technical_Answer__c/fields/Other_Question__c.field-meta.xml
<CustomField>
    <fullName>Other_Question__c</fullName>
    <label>Other Question</label>
    <type>TextArea</type>
</CustomField>