force-app/main/default/objects/Candidate_Technical_Answer__c/fields/Technical_Round_3_Question__c.field-meta.xml
<CustomField>
    <fullName>Technical_Round_3_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Round (3) Question</label>
    <referenceTo>Technical_Round_3_Question__c</referenceTo>
    <relationshipLabel>Candidate - Technical Answers</relationshipLabel>
    <relationshipName>Candidate_Technical_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>