force-app/main/default/objects/Candidate_Technical_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Response__c</columns>
    <columns>Technical_Round_3_Question__c</columns>
    <columns>CandidateId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>